# BigyRenderer

./: CMakeLists.txt  README.md
resources/: scene.txt  sceneA.txt  sceneAfrican.txt  sceneD.txt  sceneDiablo.txt  sceneFull.txt  scenePlane.txt  sceneShadows.txt  sceneTest.txt
resources/plane/: diffuse.tga  normal.tga
src/: Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  DirectionLight.hpp  Draw.hpp  FileLoader.hpp  Image.cpp  Image.hpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshLoader.hpp  Model.cpp  Model.hpp  ModelLoader.hpp  Object.cpp  Object.hpp  Point.cpp  Point.hpp  PointLight.hpp  Quaternion.cpp  Quaternion.hpp  Renderer.hpp  Scene.hpp  SceneLoader.hpp  SpotLight.hpp  Timer.hpp  Triangle.cpp  Triangle.hpp  Utils.hpp  Vec2.hpp  Vec3.hpp  main.cpp
